- Added a new optimization for simple FOR loops with constant bounds
- Added special function optimizations for pinread/pinwrite
- Added SIZEOF operator to BASIC
- Added BITREV function to BASIC
- Added ALIAS, DECLARE, EXTERN, LINE, and LIB keywords to BASIC
- Fixed a few missing definitions in <propeller.h>
- Fixed a problem with SendRecvDevice() in BASIC
- Improved C++ compatibility for class functions, including supporting "static" in classes and declarations of functions outside the class

Version 5.9.6
- Added error for non-constant compile time initializers
- Allow ALIGNL and ALIGNW in VAR sections
- Fixed incorrect error when printing DEBUG expressions containing function calls
- Fixed error in assignment chain processing in Spin1 when one item is a function
- Fixed some bugs in parsing C struct declarations
- Issue an error for redefinition with different type inside a class

Version 5.9.5
- Added CHAIN #n for BASIC, and _fexecve(fd, argv, envp) for C
- Fixed incorrect static function detection when coginit is used (affected reSound)
- Fixed a serious memory overflow bug in fopen()

Version 5.9.4
- Added some error checking for parameters of CPU/coginit/cognew
- Added --charset=C for changing runtime character set
- Fixed Spin2 round(), trunc(), and float() operators for variable expressions
- Fixed multiply by -1 when local variables are on the stack
- Fixed expansion of macros which contain other macros
- Fixed ABORT in Spin functions with no return statements
- Fixed C _clkfreq constant in multiple enums problem
- Implemented subset of try/catch for C++
- Improved Catalina compatibility for spin2cpp
- Various improvements to the nu code backend

Version 5.9.3
- Fixed automatic detection of floats for printf/scanf
- Fixed optimizer errors on SCA, XORO32, and similar instructions
- Fixed a spurious warning about 0-0 in inline assembly
- Implemented new Spin2 floating point operations
- Prevent loops containing BRK from being optimized to REP